k8s/db-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-worker-deploy
  namespace: chess-backend-stateless
  labels:
    component: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker-pod
  template:
    metadata:
      labels:
        component: worker-pod
    spec:
      containers:
      - name: chess-worker-container
        image: vishalbhatsoori/db-worker:latest 
        imagePullPolicy: Always
