k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: data
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: client
  - port: 9093
    name: controller
  clusterIP: None  
  selector:
    app: kafka
