k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-backend-ingress
  namespace: chess-backend-stateless
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "ec2-65-0-75-103.ap-south-1.compute.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chess-backend-service
            port:
              number: 80
